--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.ini
+*index.html
+*.bib
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python
