get current file dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.ini
 *index.html
 *.bib
+*.psd
+*.jpg
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python
